--- a/package.json
+++ b/package.json
@@ -36,14 +36,13 @@
     "expo": "~49.0.15",
     "expo-2d-context": "^0.0.3",
     "expo-gl": "^13.2.0",
-    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "ts-standard": "^12.0.2"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "ts-standard": "^12.0.2",
     "typescript": "^5.1.3"
   }
 }
