--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "expo-2d-game-engine",
     "slug": "expo-2d-game-engine",
     "version": "0.1.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
