--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo": "~49.0.15",
     "expo-2d-context": "^0.0.3",
     "expo-av": "^13.6.0",
+    "expo-build-properties": "^0.8.3",
     "expo-gl": "^13.2.0",
     "react": "18.2.0",
     "react-native": "0.72.6"
