--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     ]
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-2d-context": "^0.0.3",
-    "expo-av": "^13.6.0",
-    "expo-build-properties": "^0.8.3",
-    "expo-gl": "^13.2.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
+    "expo": "^51.0.25",
+    "expo-2d-context": "^0.0.4",
+    "expo-av": "^14.0.6",
+    "expo-build-properties": "^0.12.5",
+    "expo-gl": "^14.0.2",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.2.79",
     "ts-standard": "^12.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   }
 }
