--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     ]
   },
   "dependencies": {
+    "@shopify/react-native-skia": "1.2.3",
     "expo": "^51.0.25",
     "expo-2d-context": "^0.0.4",
     "expo-av": "^14.0.6",
     "expo-build-properties": "^0.12.5",
     "expo-gl": "^14.0.2",
     "react": "^18.2.0",
-    "react-native": "^0.74.5"
+    "react-native": "^0.74.5",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
