--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-gl": "^14.0.2",
     "react": "^18.2.0",
     "react-native": "^0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
